src/objects/TRAK_Git_Commit__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Comment__c</fullName>
        <label>Commit Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commit_ID__c</fullName>
        <label>Commit ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <label>Git Commit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Commit_ID__c</columns>
        <columns>Author__c</columns>
        <columns>Commit_Comment__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Git-{0000}</displayFormat>
        <label>Git ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Commit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>